<resources>
    <string name="app_name">SupInfo</string>
    <string name="tittleApp">SUP\'INFO</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_up">sign up</string>
    <string name="log_in">log in</string>
    <string name="title_activity_home">Home</string>
    <string name="errorEmptyField">field should not empty</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="supinfo_supinfo_com">supinfo@supinfo.com</string>
    <string name="formaton">Formaton</string>
    <string name="mark">mark</string>
    <string name="university">university</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="communicate">Communicate</string>
    <string name="cancel">Cancel</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="degres">Degres :</string>
    <string name="bac">Bac</string>
    <string name="bachelor">Bachelor</string>
    <string name="master">Master</string>
    <string name="save">save</string>
    <string name="waiting">waiting ....</string>
    <string name="errorParameters">Error parameters</string>
    <string name="welcome">Welcome</string>
    <string name="inscriptionKO">Sign Up failed</string>
    <string name="inscriptionOK">Sign Up successful</string>
    <string name="title_activity_university">Map</string>


</resources>
